--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,8 @@
 <h1>Home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
+<h1>BLOGS</h1>
 <%= @posts.inspect %>
+
+<h1>SKILLS</h1>
 <%= @skills.inspect %>
