--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,8 +1,14 @@
 <h1>Portfolio Items</h1>
 
+<a href = "/portfolios/new">Create a new portfolio</a>
+
+<%= link_to "Create new item", new_portfolio_url %>
+
 <% @portfolio_items.each do |portfolio_item| %>
 	<p> <%= portfolio_item.title %> </p>
 	<p> <%= portfolio_item.subtitle %> </p>
 	<p> <%= portfolio_item.body %> </p>
 	<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %> 
+	<%= link_to "Edit portfolio item", edit_portfolio_url(portfolio_item.id) %>
+
 <%end%>
