--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -10,5 +10,5 @@
 	<p> <%= portfolio_item.body %> </p>
 	<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %> 
 	<%= link_to "Edit portfolio item", edit_portfolio_url(portfolio_item) %>
-
+	<%= link_to 'Delete item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure? '}%>
 <%end%>
